# VoiceS3R

./: .gitignore  Cargo.toml  README.md  esp_sr_bindings.h  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
assets/: prompt_ap.pcm  prompt_ready.pcm  prompt_thinking.pcm
src/: audio.rs  codec.rs  config.rs  control.html  control.rs  main.rs  net.rs  provision.rs  storage.rs  wakeword.rs  wifi.rs
