[package]
name = "atom-voice-s3r"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "atom-voice-s3r"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

[dependencies]
log = "0.4"
anyhow = "1"
esp-idf-svc = "0.51"
es8311 = "0.1"

[build-dependencies]
embuild = "0.33"
